# Protocol-Buffers-Notes

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.gradle  run.sh  script.sh  settings.gradle
src/main/cpp/: MyMessageMain.cc  main.cpp
src/main/go/: go.mod  go.sum  main.go
src/main/go/pb/: ContextEnum.pb.go  MyMessage.pb.go
src/main/java/: Main.java  MyMessageMain.java
src/main/java/me/piotr/wera/: ContextEnumOuterClass.java  MyMessageOuterClass.java
src/main/proto/: ContextEnum.proto  MyMessage.proto  comments.proto  enums.proto  repeated-fields.proto  scalar-types.proto  script.sh
